[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyjax"
version = "0.0.1"
authors = [
  { name = "疒奀", email = "yz@mmon.co" },
]
description = "Hy bindings for JAX"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mlegls/hyjax"
"Bug Tracker" = "https://github.com/mlegls/hyjax/issues"
